# from-tard-to-pro-at-2048

./: .gitignore  README.md  object_detection.py  pyproject.toml  random_moves.py  tasks.md  utils.py
doc/: design.tex
doc/chapters/: code_modules.tex  image_processing.tex  initialization.tex  overall_structure.tex  random.tex  random_overall_structure.tex  random_results.tex  results.tex  rl.tex  rl_overall_structure.tex
notebooks/: random_moves_results_processing.ipynb
src/: config.py  game.py  game_gui.py  image_processing.py  initialization.py  pygame_gui.py  random_moves.py  random_moves_nogui.py
src/fkn_pro/: image_processing.py  initialization.py
src/game/: game_control.py  game_gui.py  rl_environment.py
src/game_automation/: ai_moves_rl.py  random_moves_nogui.py  random_moves_rl.py  rl.py
src/legacy/: image_processing.py  initialization.py  random_moves.py  utils.py
src/plot_results/: plot_ai_moves_results.py  plot_random_moves_results.py
src/random_moves/: random_moves.py
src/results/: random_moves_results_20180713162316279796.csv
tst/: test_game.py
